--- a/ejemplo_tp/Makefile
+++ b/ejemplo_tp/Makefile
@@ -1,14 +1,14 @@
 pdf:
-	pdflatex TP.tex
+	pdflatex TP_copy.tex
 
 ignorando-errores:
-	pdflatex -interaction=nonstopmode TP.tex
+	pdflatex -interaction=nonstopmode TP_copy.tex
 
 bibliografia:
-	pdflatex TP.tex
-	bibtex ejemplo_tp_grupal.aux
-	pdflatex TP.tex
-	pdflatex TP.tex
+	pdflatex TP_copy.tex
+	bibtex TP_copy.aux
+	pdflatex TP_copy.tex
+	pdflatex TP_copy.tex
 
 clean:
 	- rm -f *.log *.soc *.toc *.aux *.out  main.idx *.bbl *.bbg *.dvi *.blg *.lof *.nav *.snm *~
