Correcciones (1.1, 1.2, 1.4) para reentrega

--- a/ejemplo_tp/Makefile
+++ b/ejemplo_tp/Makefile
@@ -1,14 +1,14 @@
 pdf:
-	pdflatex TP_copy.tex
+	pdflatex TP.tex
 
 ignorando-errores:
-	pdflatex -interaction=nonstopmode TP_copy.tex
+	pdflatex -interaction=nonstopmode TP.tex
 
 bibliografia:
-	pdflatex TP_copy.tex
-	bibtex TP_copy.aux
-	pdflatex TP_copy.tex
-	pdflatex TP_copy.tex
+	pdflatex TP.tex
+	bibtex TP.aux
+	pdflatex TP.tex
+	pdflatex TP.tex
 
 clean:
 	- rm -f *.log *.soc *.toc *.aux *.out  main.idx *.bbl *.bbg *.dvi *.blg *.lof *.nav *.snm *~
